fixed images alignment

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -1,8 +1,7 @@
 
 body {
 
-    margin: auto;
-    padding: 0;
+
 background-color: #f0f0f0;
 }
 
@@ -98,13 +97,11 @@ img {
     padding-top: 100px;
 }
 
-.logo-2 {
-    padding-top: 36px;
-}
 
 #logo-2 {
     border: 4px solid #e6e6e6;
     border-radius: 4px;
+
 }
 
 .header-5 {
@@ -152,6 +149,20 @@ hr {
     border-width: 2px;
 }
 
+#trial {
+    margin: auto;
+}
+
+#trial-2 {
+    margin: auto;
+}
+
+.col-sm-6 {
+
+}
+
+
+
 @media (min-width: 576px) and (max-width: 767.98px) {
 
     .header-4 {
@@ -160,7 +171,5 @@ hr {
     }
 }
 
-.img-sm {
-    width: 50px;
-    height: 20%;
-}
+
+
